--- a/nextpage2.html
+++ b/nextpage2.html
@@ -38,7 +38,7 @@
     <h1>I love you forever ❤</h1>
     <h2>Happy Valentine's Day, my love!</h2>
     
-    <p>My love, you are very special to me. Thank you for coming into my life and giving me the chance to love you.  
+    <p>My love, my heart❤, my everything, i love you my buggu,you are very special to me. Thank you for coming into my life and giving me the chance to love you.  
        You don’t know how much I love you. Your presence in my life makes me feel truly important.  
        You understand me and always support me. I might not always express my feelings perfectly,  
        but I will always love you.  
