--- a/nextpage.html
+++ b/nextpage.html
@@ -23,6 +23,29 @@
     <h1>Here's Your Special Surprise 1! 💖</h1>
     <img src="https://www.fnp.com/assets/images/custom/quotes/valentine/valentines-day-pictures-n.jpg">
     <p>I love you forever! ❤</p>
+    <img src="https://imgur.com/a/CDp8ZUI">
+    <p> In the grand symphony of life, he walks with a heart full of dreams and eyes that shine with determination.
+        Every challenge, every sleepless night of hard work, is just another step toward the future he’s building. 
+        But beyond all the ambitions and struggles, there’s one thing that keeps him going—her. She’s not just a part of his world; 
+        she is his world. Her eyes, deep like a serene lake, hold a magic that pulls him in, 
+        making him forget the weight of everything else. And her smile? Uff… it’s not just a smile; it’s a force that stops time, 
+        weakens his heart, and makes the whole world feel right again. Even from miles away, she’s the warmth in his cold days,
+        the softness in his toughest battles, the love that keeps his fire alive. He may be chasing dreams, but in the end, 
+        she is the dream he never wants to wake up from.n the vast universe of ambitions and dreams, he moves with relentless passion,
+        chasing a future that glows like a distant star. But even among all his goals, one thing outshines everything—her. She is the poetry in his prose,
+        the melody in his silence, the calm in his chaos. Her eyes, like small, endless lakes, hold galaxies of love, pulling him in, drowning him in a world where only they exist.
+        Every time he pictures her, it’s like the universe itself pauses to admire her beauty—the kind that isn’t just seen but felt in the deepest corners of the heart.
+        And her smile? Oh, that smile... It’s not just a curve of lips; it’s a spell, a heartbeat-skipping, soul-stealing kind of magic.
+        One look at it, and the world blurs into the background, leaving only her—a vision too perfect to be real, yet she exists, 
+        and she’s his. Even miles apart, she’s the whisper in his thoughts, the warmth in his coldest nights,
+        the dream he never wants to wake up from.
+        She’s not just someone he loves; she’s the air he breathes, the fire that fuels him, the home he’s always searching for. 
+        And no matter how tough the road gets, one thing is certain—every challenge, 
+        every sleepless night, every battle he fights is all worth it because, in the end, 
+        she’s the destination his heart will always find its way back to.
+
+
+</p>
     <button class="btn" onclick="showSurprise()">Open Your Surprise</button>
 
     <script>
