--- a/nextpage.html
+++ b/nextpage.html
@@ -23,7 +23,7 @@
     <h1>Here's Your Special Surprise 1! 💖</h1>
     <img src="https://www.fnp.com/assets/images/custom/quotes/valentine/valentines-day-pictures-n.jpg">
     <p>I love you forever! ❤</p>
-    <img src="https://imgur.com/a/CDp8ZUI">
+    <img src="https://drive.google.com/file/d/1vZeUF5Q0zcswKm9RmgsE8awpxOtJynUG/view?usp=drivesdk">
     <p> In the grand symphony of life, he walks with a heart full of dreams and eyes that shine with determination.
         Every challenge, every sleepless night of hard work, is just another step toward the future he’s building. 
         But beyond all the ambitions and struggles, there’s one thing that keeps him going—her. She’s not just a part of his world; 
